added edits to all pages

--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -3,13 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sports Tube Project | AI Content & SEO Portfolio Project by Genny Allison</title>
-    <meta name="description" content="Sports Tube is part of Genny Allison's AI Content Creator & SEO Specialist portfolio. This case study showcases AI-powered content, responsive design, and PageSpeed Insights optimization for a modern, sports-themed blog.">
-
+    <title>Sports Tube Video Blog Project | AI Content & SEO Portfolio Project by Genny Allison</title>
+    <meta name="description" content="Explore the Sports Tube Video Blog Project by Genny Allison—an AI-powered case study showcasing SEO content creation, responsive web design, and a 100/100 PageSpeed Insights grade. Navigate to the design, case study, audit grade, and contact info from this interactive hub." />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+
+    <meta property="og:title" content="Sports Tube Video Blog Project | AI Content & SEO Portfolio by Genny Allison" />
+    <meta property="og:description" content="Discover how AI tools and SEO strategy shaped the Sports Tube Project. This interactive portfolio hub links to the case study, performance grade, design wireframes, and contact page." />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,g_auto,w_1458,h_948/v1748537741/sports-tube-desktop_c9qmdx.avif" />
+    <meta property="og:url" content="https://sports-tube.netlify.app/pages/project2/project2-intro.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Genny Allison | AI Content & SEO Portfolio" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sports Tube Video Blog Project | AI Content & SEO Portfolio by Genny Allison" />
+    <meta name="twitter:description" content="AI-driven content, SEO-focused development, and 100/100 PageSpeed Insights optimization—explore the Sports Tube Project collections page and navigate to key case study sections." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,g_auto,w_1458,h_948/v1748537741/sports-tube-desktop_c9qmdx.avif" />
+    <meta name="twitter:creator" content="@allis78978" />
 
     <!-- Desktop ≥ 941px -->
     <link
@@ -69,75 +81,96 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "WebPage",
-        "name": "Tech Trends Project | AI Content & SEO Portfolio Project by Genny Allison",
-        "url": "https://tech-trends-blog.netlify.app",
-        "description": "Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions.",
+        "@type": "CollectionPage",
+        "name": "Sports Tube Video Blog Project | AI Content & SEO Portfolio by Genny Allison",
+        "url": "https://sports-tube.netlify.app/pages/project2/project2-intro.html",
+        "description": "Explore the Sports Tube Video Blog Project by Genny Allison—an AI-powered case study showcasing SEO content creation, responsive web design, and a 100/100 PageSpeed Insights grade. Navigate to the design, case study, audit grade, and contact info from this interactive hub.",
         "inLanguage": "en",
-        "datePublished": "2024-11-15",
-        "dateModified": "2025-05-19",
-        "isPartOf": {
-          "@type": "Blog",
-          "name": "Tech Trends Blog",
-          "url": "https://tech-trends-blog.netlify.app"
-        },
-        "breadcrumb": {
-          "@type": "BreadcrumbList",
-          "itemListElement": [
-            {
-              "@type": "ListItem",
-              "position": 1,
-              "name": "Home",
-              "item": "https://tech-trends-blog.netlify.app"
-            },
-            {
-              "@type": "ListItem",
-              "position": 2,
-              "name": "Projects",
-              "item": "https://tech-trends-blog.netlify.app/projects"
-            }
-          ]
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,g_auto,w_1458,h_948/v1748537741/sports-tube-desktop_c9qmdx.avif",
+          "width": 1458,
+          "height": 948
         },
         "author": {
           "@type": "Person",
           "name": "Genny Allison",
           "url": "https://gennyallison.netlify.app",
-          "jobTitle": "Front-End Developer & AI Content Specialist",
+          "jobTitle": "AI Content Creator & SEO Specialist",
           "sameAs": [
             "https://www.linkedin.com/in/genny-allison/",
-            "https://github.com/Allison2002"
+            "https://github.com/Allison2002",
+            "https://x.com/allis78978",
+            "https://www.instagram.com/allison_stock_inc/"
           ]
         },
+        "creator": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "url": "https://gennyallison.netlify.app"
+        },
+        "mainEntity": [
+          {
+            "@type": "WebPage",
+            "name": "The Case Study",
+            "url": "https://sports-tube.netlify.app/pages/project2/project2-the-casestudy.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "The Grade",
+            "url": "https://sports-tube.netlify.app/pages/project2/project2-the-grade.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "The Design",
+            "url": "https://sports-tube.netlify.app/pages/project2/project2-the-design.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "Contact Me",
+            "url": "https://sports-tube.netlify.app/pages/project2/project2-intro.html#author-bio"
+          }
+        ],
         "publisher": {
           "@type": "Organization",
           "name": "Allison Stock Inc.",
           "url": "https://gennyallison.netlify.app",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550616/allisonstock-black-logo_yalqqx.avif",
-            "width": 531,
-            "height": 255
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif",
+            "width": 242,
+            "height": 105
           }
-        },
-        "image": {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif",
-          "width": 748,
-          "height": 400
-        },
-        "mainEntity": {
-          "@type": "CreativeWork",
-          "name": "Tech Trends Blog",
-          "about": [
-            "AI Content Creation",
-            "SEO Optimization",
-            "Web Performance",
-            "WCAG Accessibility",
-            "UI/UX Design"
-          ]
         }
       }
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Project",
+            "item": "https://gennyallison.netlify.app/pages/project2/project2-intro"
+          }
+        ]
+      }
+    </script>
+
     <style>
       picture {
         width: 100%;
@@ -436,20 +469,27 @@
           <h2>sports tube</h2>
         </div>
         <article class="resume-summary" id="section1">
-          <h2>
-            AI Content Creator & SEO Specialist Portfolio Project
-          </h2>
+          <h2>AI Content Creator & SEO Specialist Portfolio Project</h2>
           <p>
-            Sports Tube is a dynamic platform that blends <strong>AI-driven content</strong> creation with modern web development to offer insights into the latest technology trends, tools, and innovations. With a sleek, responsive design, the site now scores <strong>99/100</strong> on mobile and <strong>100/100</strong> on desktop in <strong>Google PageSpeed Insights</strong>, ensuring fast load times and a smooth user experience across all devices.
+            <strong>Sports Tube Video Blog</strong> is a high-performance, AI-powered platform designed to deliver engaging, tech-focused content with a fun and modern aesthetic. Built entirely from scratch, this project demonstrates my ability to merge <strong>AI-generated content</strong> with <strong>SEO-focused website development</strong> and optimized front-end performance.
           </p>
+
           <p>
-            While recent changes in <strong>Google's PageSpeed Insights</strong> scoring system, along with my use of <strong>Netlify</strong> and <strong>Cloudinary’s</strong> free-tier services, have made it harder to achieve perfect scores, Sports Tube still performs at an exceptional level. It previously held a perfect 100/100 score, and the site remains high-performing, particularly when it comes to <strong>SEO</strong> and usability.
+            The site showcases a <strong>sleek, responsive design</strong> and has earned top performance scores—<strong>99/100 on mobile</strong> and <strong>100/100 on desktop</strong>—on <strong>Google PageSpeed Insights</strong>. These results reflect a strong command of <strong>Core Web Vitals</strong>, performance tuning, and accessibility best practices.
           </p>
+
           <p>
-            AI tools like <strong>ChatGPT</strong>, <strong>Midjourney</strong>, <strong>Relume.io</strong>, and <strong>Uizard</strong> played a huge role in shaping both the design and content of the site. The articles are carefully crafted with <strong>AI</strong> assistance, and custom visuals, designed with <strong>Photoshop</strong> and <strong>Canva</strong>, give the site a professional and visually striking look. The structure of the site was meticulously planned using <strong>Figma</strong> and <strong>Relume.io</strong>, with a focus on providing a seamless user experience and making sure the site is accessible to all.</p>
-          <p>
-            Hosted on Netlify for smooth performance, Sports Tube is a prime example of how AI and web development can work together to create a compelling, engaging platform for tech enthusiasts.
+            While recent updates to PageSpeed scoring and limitations of free-tier services like <strong>Netlify</strong> and <strong>Cloudinary</strong> present new challenges, Sports Tube continues to rank high in SEO and user experience. Previously holding a perfect 100/100 across the board, it remains a <strong>fast-loading, high-ranking site</strong> optimized for both users and search engines.
           </p>
+
+          <p>
+            This project integrates <strong>AI tools</strong> such as <strong>ChatGPT</strong> for intelligent content creation, <strong>MidJourney</strong> for imagery, and <strong>Uizard</strong> and <strong>Relume.io</strong> for visual and structural planning. Design assets were crafted using <strong>Photoshop</strong> and <strong>Canva</strong>, while the site architecture was refined in <strong>Figma</strong> to ensure a professional, accessible, and engaging user experience.
+          </p>
+
+          <p>
+            Deployed via Netlify, <strong>Sports Tube Video Blog</strong> reflects the future of digital content—where <strong>AI content creation</strong>, <strong>SEO optimization</strong>, and <strong>performance-first design</strong> come together to build standout web experiences.
+          </p>
+
           <div class="takeme-text">
             <h3>take me to...</h3>
           </div>
@@ -586,7 +626,7 @@
                 />
                 <img 
                   src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_222/v1739209644/thumbnails-unbelievable-plays_d23ogq.avif"
-                  alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
+                  alt="Explore Sports Tube Video Blog, a website created by Genny Allison showcasing a fast-loading, responsive sports blog with AI-generated content "
                   width="147"
                   height="111"
                   loading="auto"  
@@ -626,9 +666,11 @@
             />
           </picture> 
           <div class="author-bio-text">
-            <h3>Partner with an AI Content Specialist & Web Developer</h3>
-            <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-            <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+            <h3>Partner with an AI Content Creator & SEO Specialist</h3>
+            <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
+            <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
+            <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
+
             <p>Connect with me on 
               <a href="https://www.linkedin.com/in/genny-allison/" 
                 target="_blank" 
@@ -646,11 +688,11 @@
     <div id="side-nav" class="hidden">
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
-        <li><a href="/pages/project3/project3-intro.html#the-menu">the "menu"</a></li>
-        <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
-        <li><a href="/pages/project3/project3-the-grade.html">the grade</a></li>
-        <li><a href="/pages/project3/project3-the-design.html">the design</a></li>
-        <li><a href="/pages/project3/project3-the-casestudy.html">the casestudy</a></li>
+        <li><a href="/pages/project2/project2-intro.html#the-menu">the "menu"</a></li>
+        <li><a href="https://github.com/Allison2002/my_tube.git">the code</a></li>
+        <li><a href="/pages/project2/project2-the-grade.html">the grade</a></li>
+        <li><a href="/pages/project2/project2-the-design.html">the design</a></li>
+        <li><a href="/pages/project2/project2-the-casestudy.html">the casestudy</a></li>
         <li><a href="#author-bio">contact me</a></li>
       </ul>
     </div>
@@ -691,7 +733,7 @@
             <li><a href="/pages/skills.html" class="links">my skills</a></li>
             <li><a href="/pages/resume.html" class="links">my resume</a></li>
             <li><a href="/pages/collections.html" class="links">my work</a></li> 
-            <li><a href="/pages/project1/project1-intro.html#author-bio" class="links">contact me</a></li>
+            <li><a href="/pages/project2/project2-intro.html#author-bio" class="links">contact me</a></li>
           </ul>
         </div>
         <div class="social-media">
