--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Trends Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
+    <meta name="description" content="Explore the design and wireframe of the Sports Tube Video Blog by AI Content Creator & SEO Specialist Genny Allison. This page highlights responsive layout, AI-generated visuals, and SEO-optimized UI for high-performing, fast-loading websites." />
 
-    <meta name="description" content="Discover the creative design process behind the Tech Trends Project by Genny Allison. This case study showcases responsive web design, AI-generated content, SEO optimization, accessibility (WCAG), and lightning-fast Core Web Vitals—all part of her AI Content Creator & SEO Specialist portfolio." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+
+    <meta property="og:title" content="Sports Tube Video Blog Design | AI Content & SEO Portfolio | Genny Allison" />
+    <meta property="og:description" content="Discover how Genny Allison designed the Sports Tube Video Blog using AI-generated content, SEO best practices, and responsive UI techniques. See wireframes, mood boards, and the creative vision behind the project." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tech-trends-blog.netlify.app/pages/project2/project2-the-design.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748537741/sports-tube-desktop_c9qmdx.avif" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sports Tube Video Blog Design | AI Content & SEO Portfolio | Genny Allison" />
+    <meta name="twitter:description" content="View the Sports Tube Video Blog design page by Genny Allison—featuring wireframes, mood boards, and an SEO-optimized, AI-powered layout for a modern sports blog." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748537741/sports-tube-desktop_c9qmdx.avif" />
+    <meta name="twitter:site" content="@allis78978" />
 
     <!-- Desktop ≥ 941px -->
     <link
@@ -69,10 +81,10 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Tech Trends Project | The Design",
-        "url": "https://tech-trends-blog.netlify.app/pages/project1/project1-the-design.html",
-        "description": "Explore the design behind the Tech Trends Project by Genny Allison. This page highlights AI-powered layout, SEO-optimized visuals, responsive design techniques, and WCAG accessibility.",
-        "datePublished": "2025-05-28",
+        "name": "Sports Tube Video Blog Design | AI Content & SEO Portfolio | Genny Allison",
+        "url": "https://tech-trends-blog.netlify.app/pages/project2/project2-the-design.html",
+        "description": "Explore the design and wireframe of the Sports Tube Video Blog by AI Content Creator & SEO Specialist Genny Allison. This page highlights responsive layout, AI-generated visuals, and SEO-optimized UI for high-performing, fast-loading websites.",
+        "datePublished": "2025-06-03",
         "author": {
           "@type": "Person",
           "name": "Genny Allison",
@@ -97,9 +109,9 @@
         },
         "mainEntity": {
           "@type": "CreativeWork",
-          "name": "Tech Trends Blog",
+          "name": "Sports Tube Video Blog Project",
           "url": "https://tech-trends-blog.netlify.app",
-          "description": "An AI-powered SEO blog highlighting the latest trends in digital design, technology, and content strategy."
+          "description": "A portfolio project showcasing the design, wireframe, and performance-focused layout of the Sports Tube Video Blog. Developed by Genny Allison using AI-generated content and SEO-driven techniques."
         },
         "breadcrumb": {
           "@type": "BreadcrumbList",
@@ -119,19 +131,79 @@
             {
               "@type": "ListItem",
               "position": 3,
-              "name": "Tech Trends Project",
+              "name": "Sports Tube Project",
               "item": "https://tech-trends-blog.netlify.app"
             },
             {
               "@type": "ListItem",
               "position": 4,
               "name": "The Design",
-              "item": "https://tech-trends-blog.netlify.app/pages/project1/project1-the-design.html"
+              "item": "https://tech-trends-blog.netlify.app/pages/project2/project2-the-design.html"
             }
           ]
         }
       }
     </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Blog",
+            "item": "https://gennyallison.netlify.app/pages/project2/project2-intro"
+          }
+        ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Blog",
+            "item": "https://gennyallison.netlify.app/pages/project2/project2-intro"
+          },
+          {
+            "@type": "ListItem",
+            "position": 4,
+            "name": "The Design",
+            "item": "https://gennyallison.netlify.app/pages/project2/project2-the-design"
+          }
+        ]
+      }
+    </script>
+
     <style>
       picture {
         width: 100%;
@@ -621,9 +693,11 @@
             />
           </picture> 
           <div class="author-bio-text">
-            <h3>Partner with an AI Content Specialist & Web Developer</h3>
-            <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-            <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+            <h3>Partner with an AI Content Creator & SEO Specialist</h3>
+            <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
+            <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
+            <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
+
             <p>Connect with me on 
               <a href="https://www.linkedin.com/in/genny-allison/" 
                 target="_blank" 
@@ -642,7 +716,7 @@
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
         <li><a href="/pages/project2/project2-intro.html#the-menu">the "menu"</a></li>
-        <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
+        <li><a href="https://github.com/Allison2002/my_tube.git">the code</a></li>
         <li><a href="/pages/project2/project2-the-grade.html">the grade</a></li>
         <li><a href="/pages/project2/project2-the-design.html">the design</a></li>
         <li><a href="/pages/project2/project2-the-casestudy.html">the casestudy</a></li>
@@ -686,7 +760,7 @@
             <li><a href="/pages/skills.html" class="links">my skills</a></li>
             <li><a href="/pages/resume.html" class="links">my resume</a></li>
             <li><a href="/pages/collections.html" class="links">my work</a></li> 
-            <li><a href="/pages/project1/project1-intro.html#author-bio" class="links">contact me</a></li>
+            <li><a href="/pages/project2/project2-the-design.html#author-bio" class="links">contact me</a></li>
           </ul>
         </div>
         <div class="social-media">
