--- a/pages/project3/project3-intro.html
+++ b/pages/project3/project3-intro.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sports Tube Community Project | AI Content & SEO Portfolio Project by Genny Allison</title>
-    <meta name="description" content="Discover the Sports Tube Community Project by Genny Allison—an SEO-optimized, AI-powered blog platform featuring responsive web design, keyword-rich content, and perfect PageSpeed scores. Explore how AI content creation and SEO strategy come together in this portfolio piece." />
+    <meta name="description" content="Explore the Sports Tube Community Blog Project by AI Content Creator & SEO Specialist Genny Allison. This collection page introduces an AI-powered, SEO-optimized sports blog built for user-submitted content, and links to the case study, design strategy, PageSpeed 100 grade, and final launch." />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison" />
+    <meta property="og:description" content="Explore this high-performance, AI-driven sports blog built for community submissions. See how Genny Allison achieved perfect SEO scores, responsive design, and powerful user engagement with AI content and optimization strategies." />
+    <meta property="og:url" content="https://sports-tube-community.netlify.app/pages/project3/project3-intro.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
+    <meta property="og:image:alt" content="Hero image of the Sports Tube Community Blog Project showcasing AI-generated content and responsive design" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison" />
+    <meta name="twitter:description" content="Dive into the Sports Tube Community Project—an AI-powered, SEO-optimized blog platform by Genny Allison, featuring user-submitted content and perfect PageSpeed scores." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
+    <meta name="twitter:image:alt" content="Intro screenshot of the Sports Tube Community Blog Project showing responsive layout and AI visuals" />
 
     <!-- Desktop ≥ 941px -->
     <link
@@ -62,9 +74,7 @@
     <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <noscript><link rel="stylesheet" href="/styles/styles-article.css"></noscript>
-
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
-
     <style>
       picture {
         width: 100%;
@@ -259,6 +269,115 @@
       }
 
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "CollectionPage",
+        "name": "Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison",
+        "description": "Explore the Sports Tube Community Blog Project by AI Content Creator & SEO Specialist Genny Allison. This page introduces the AI-powered, SEO-optimized blog platform featuring user-submitted sports articles. Navigate to the full case study, PageSpeed 100/100 grade, wireframe, design concept, and final site launch.",
+        "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html",
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+          "width": 1458,
+          "height": 948,
+          "caption": "Hero image of the Sports Tube Community Blog Project showcasing AI-generated content and responsive design"
+        },
+        "hasPart": [
+          {
+            "@type": "WebPage",
+            "name": "The Grade | PageSpeed Insights 100/100",
+            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "The Case Study",
+            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-casestudy.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "The Design Strategy",
+            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-design.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "The Wireframe",
+            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-wireframe.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "Final Website",
+            "url": "https://sports-tube-community.netlify.app/"
+          },
+          {
+            "@type": "ContactPage",
+            "name": "Contact Genny Allison",
+            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html#author-bio"
+          }
+        ],
+        "creator": {
+          "@type": "Person",
+          "name": "Genny Allison",
+          "jobTitle": "AI Content Creator & SEO Specialist",
+          "url": "https://gennyallison.netlify.app",
+          "sameAs": [
+            "https://www.linkedin.com/in/genny-allison/",
+            "https://github.com/Allison2002",
+            "https://x.com/allis78978",
+            "https://www.instagram.com/allison_stock_inc/"
+          ]
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "url": "https://gennyallison.netlify.app",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9.avif",
+            "width": 484,
+            "height": 210
+          }
+        },
+        "datePublished": "2025-06-02",
+        "dateModified": "2025-06-02",
+        "keywords": [
+          "AI content creator portfolio",
+          "SEO content specialist",
+          "PageSpeed 100 optimization",
+          "AI website development case study",
+          "responsive web design",
+          "Core Web Vitals optimization",
+          "SEO strategy portfolio",
+          "user-generated sports blog"
+        ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Project",
+            "item": "https://gennyallison.netlify.app/pages/project3/project3-intro"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <header>
@@ -339,7 +458,7 @@
           <!-- Fallback ≤480px -->
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif"
-            alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
+            alt="Intro page for Sports Tube Community Project showcasing AI-generated content, SEO optimization, and responsive layout with links to detailed case study sections"
             width="164"
             height="100"
             style="object-fit: cover;"
@@ -362,18 +481,22 @@
           <h2>sports tube community</h2>
         </div>
         <article class="resume-summary" id="section1">
-          <h2>
-            AI Content Creator & SEO Specialist Portfolio Project
-          </h2>
+          <h2>AI Content Creator & SEO Specialist Portfolio Project</h2>
           <p>
-            The Sports Tube Community Blog is a high-performance, AI-driven platform built to unite sports fans through SEO-optimized articles and immersive visuals. This project showcases my specialty in using AI-generated content for websites, search engine strategy, and front-end performance tuning.
+            <strong>Sports Tube Community Blog</strong> is the sister site to the Sports Tube Video Blog, built as a modern, AI-optimized platform where sports fans can publish and share their own articles. This dynamic blog project highlights my expertise in <strong>AI-powered content creation</strong>, <strong>SEO-driven development</strong>, and user-focused digital design.
           </p>
+
           <p>
-            Leveraging advanced AI tools such as ChatGPT for content generation and MidJourney for imagery, the site features high-quality articles and visuals that resonate with its target audience. Custom visuals and animations, enhanced using Canva and Figma, contribute to its professional aesthetic, while tools like Relume.io supported the creation of an intuitive and seamless user interface.
+            From concept to deployment, this project was created to demonstrate how <strong>AI-assisted storytelling</strong> and <strong>fast-loading web performance</strong> can coexist in a seamless user experience. With a responsive layout and custom CMS-style article structure, the site delivers both flexibility and performance. It proudly holds a <strong>100/100 score on Google PageSpeed Insights</strong> across mobile and desktop, ensuring optimal delivery and Core Web Vitals compliance.
           </p>
+
           <p>
-            The site achieved perfect SEO scores of 100 on both mobile and desktop, showcasing exceptional performance, accessibility, and user engagement. Hosted on Netlify, it serves as a shining example of the transformative potential of artificial intelligence in digital media and content strategy.
-          </p> 
+            I used <strong>ChatGPT</strong> to develop copy and support UX writing, while <strong>MidJourney</strong> and <strong>Canva</strong> provided striking, AI-enhanced visuals. The structure and layout were carefully mapped using <strong>Figma</strong> and <strong>Relume.io</strong>, with added refinements using <strong>Uizard</strong> for mobile-first responsiveness and WCAG accessibility alignment.
+          </p>
+
+          <p>
+            Hosted on <strong>Netlify</strong> and supported by Cloudinary for optimized image delivery, Sports Tube Community is a living example of scalable, community-focused content built with performance, usability, and search discoverability at its core.
+          </p>
           <div class="takeme-text">
             <h3>take me to...</h3>
           </div>
@@ -550,9 +673,11 @@
             />
           </picture> 
           <div class="author-bio-text">
-            <h3>Partner with an AI Content Specialist & Web Developer</h3>
-            <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-            <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+            <h3>Partner with an AI Content Creator & SEO Specialist</h3>
+            <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
+            <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
+            <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
+
             <p>Connect with me on 
               <a href="https://www.linkedin.com/in/genny-allison/" 
                 target="_blank" 
@@ -571,7 +696,7 @@
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
         <li><a href="/pages/project3/project3-intro.html#the-menu">the "menu"</a></li>
-        <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
+        <li><a href="https://github.com/Allison2002/sports_tube_community.git">the code</a></li>
         <li><a href="/pages/project3/project3-the-grade.html">the grade</a></li>
         <li><a href="/pages/project3/project3-the-design.html">the design</a></li>
         <li><a href="/pages/project3/project3-the-casestudy.html">the casestudy</a></li>
@@ -615,7 +740,7 @@
             <li><a href="/pages/skills.html" class="links">my skills</a></li>
             <li><a href="/pages/resume.html" class="links">my resume</a></li>
             <li><a href="/pages/collections.html" class="links">my work</a></li> 
-            <li><a href="/pages/project1/project1-intro.html#author-bio" class="links">contact me</a></li>
+            <li><a href="/pages/project3/project3-intro.html#author-bio" class="links">contact me</a></li>
           </ul>
         </div>
         <div class="social-media">
