--- a/pages/project3/project3-the-grade.html
+++ b/pages/project3/project3-the-grade.html
@@ -365,7 +365,7 @@
         <div class="website-grade fancy-border-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1364/v1743469949/seo-grade_mmztmf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,/v1743469949/seo-grade_mmztmf.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -388,7 +388,7 @@
             />
           </picture>
         </div>
-        <div class="resume-summary">
+        <article class="resume-summary">
           <h2>
             AI Content Creator & SEO Specialist Portfolio Project
           </h2>
@@ -405,17 +405,17 @@
             <p>This exceptional outcome demonstrates the synergy between AI-driven solutions and web development expertise, showcasing how technology can enhance accessibility, speed, and user engagement. The Sports Tube Community Blog is a testament to my ability to deliver industry-leading performance, seamlessly blending AI, SEO, and user-focused design.</p>
 
             <p>I see this milestone not as the culmination of my journey but as a foundation for ongoing growth. Each project is an opportunity to refine my skills, embrace new challenges, and deliver transformative results for clients and users.</p>
-          </div>
+          </article>
           <div class="project-links">
             <div class="takeme-text">
               <h3>take me to the</h3>
             </div>
             <div class="button-grid">
               <div class="click-me">
-                <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">the final look</a>
+                <a href="https://sports-tube-community.netlify.app/" target="_blank" rel="noopener noreferrer">the final look</a>
               </div>
               <div class="click-me">  
-                <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
+                <a href="https://github.com/Allison2002/sports_tube_community.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
               </div>
             </div> 
           </div>
@@ -574,19 +574,19 @@
         <div class="pagespeed-container fancy-border-img" id="pagespeed">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1676/v1742916682/tech-trends-finish-mobile_ca3hzy.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1676/v1746490644/sports-tube-communit-grade-mobile-ended_xr1sv4.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_882,h_898/v1742916682/tech-trends-finish-mobile_ca3hzy.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_882,h_898/v1746490644/sports-tube-communit-grade-mobile-ended_xr1sv4.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_636/v1742916682/tech-trends-finish-mobile_ca3hzy.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_636/v1746490644/sports-tube-communit-grade-mobile-ended_xr1sv4.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
               width="312"
               height="318"
@@ -653,9 +653,11 @@
             />
           </picture> 
           <div class="author-bio-text">
-            <h3>Partner with an AI Content Specialist & Web Developer</h3>
-            <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-            <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+            <h3>Partner with an AI Content Creator & SEO Specialist</h3>
+            <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
+            <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
+            <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
+
             <p>Connect with me on 
               <a href="https://www.linkedin.com/in/genny-allison/" 
                 target="_blank" 
@@ -674,7 +676,7 @@
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
         <li><a href="/pages/project3/project3-intro.html#the-menu">the "menu"</a></li>
-        <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
+        <li><a href="https://github.com/Allison2002/sports_tube_community.git">the code</a></li>
         <li><a href="/pages/project3/project3-the-grade.html">the grade</a></li>
         <li><a href="/pages/project3/project3-the-design.html">the design</a></li>
         <li><a href="/pages/project3/project3-the-casestudy.html">the casestudy</a></li>
@@ -701,7 +703,7 @@
             />
             <img       
               src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              alt="Allison Stock Inc. logo representing Genny Allison’s AI-powered web development and SEO services"
               width="242"
               height="105"
               loading="lazy"
@@ -718,7 +720,7 @@
             <li><a href="/pages/skills.html" class="links">my skills</a></li>
             <li><a href="/pages/resume.html" class="links">my resume</a></li>
             <li><a href="/pages/collections.html" class="links">my work</a></li> 
-            <li><a href="/pages/project1/project1-intro.html#author-bio" class="links">contact me</a></li>
+            <li><a href="/pages/project3/project3-the-grade.html#author-bio" class="links">contact me</a></li>
           </ul>
         </div>
         <div class="social-media">
