--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -411,7 +411,7 @@
           <!-- Fallback ≤480px -->
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
-            alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
+            alt="Welcome to Tech Trends hero image, a SEO optimized website showcasing a modern, futuristic design with technology vibes"
             width="164"
             height="100"
             style="object-fit: cover;"
@@ -635,9 +635,11 @@
             />
           </picture> 
           <div class="author-bio-text">
-            <h3>Partner with an AI Content Specialist & Web Developer</h3>
-            <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-            <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+            <h3>Partner with an AI Content Creator & SEO Specialist</h3>
+            <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
+            <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
+            <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
+
             <p>Connect with me on 
               <a href="https://www.linkedin.com/in/genny-allison/" 
                 target="_blank" 
