--- a/pages/project3/project3-the-design.html
+++ b/pages/project3/project3-the-design.html
@@ -564,9 +564,11 @@
             />
           </picture> 
           <div class="author-bio-text">
-            <h3>Partner with an AI Content Specialist & Web Developer</h3>
-            <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-            <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+            <h3>Partner with an AI Content Creator & SEO Specialist</h3>
+            <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
+            <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
+            <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
+
             <p>Connect with me on 
               <a href="https://www.linkedin.com/in/genny-allison/" 
                 target="_blank" 
@@ -585,7 +587,7 @@
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
         <li><a href="/pages/project3/project3-intro.html#the-menu">the "menu"</a></li>
-        <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
+        <li><a href="https://github.com/Allison2002/sports_tube_community.git">the code</a></li>
         <li><a href="/pages/project3/project3-the-grade.html">the grade</a></li>
         <li><a href="/pages/project3/project3-the-design.html">the design</a></li>
         <li><a href="/pages/project3/project3-the-casestudy.html">the casestudy</a></li>
@@ -612,7 +614,7 @@
             />
             <img       
               src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              alt="Allison Stock Inc. logo representing Genny Allison’s AI-powered web development and SEO services"
               width="242"
               height="105"
               loading="lazy"
@@ -629,7 +631,7 @@
             <li><a href="/pages/skills.html" class="links">my skills</a></li>
             <li><a href="/pages/resume.html" class="links">my resume</a></li>
             <li><a href="/pages/collections.html" class="links">my work</a></li> 
-            <li><a href="/pages/project1/project1-intro.html#author-bio" class="links">contact me</a></li>
+            <li><a href="/pages/project3/project3-the-design.html#author-bio" class="links">contact me</a></li>
           </ul>
         </div>
         <div class="social-media">
